Ubuntu indicate progress on MessageListPage

- Show task on the bottom
- Message delegate show loading and unavailable

REVIEW: 118513
BUG: 333039